--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="https://demo-website.jatinsharma73.repl.co/">Home</a>
+            <a class="nav-link active" aria-current="page" href="https://jatinsharma09.github.io/My-Portfolio/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="about" href="https://demo-website.jatinsharma73.repl.co/#about-me">About</a>
+            <a class="nav-link" id="about" href="https://jatinsharma09.github.io/My-Portfolio/#about-me">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="projects-link"
-              href="https://demo-website.jatinsharma73.repl.co/#projects">Projects</a>
+              href="https://jatinsharma09.github.io/My-Portfolio/#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" id="contacts" href="#">Contact</a>
